Review /r/alexithymia and build FAQ

--- a/aan/mkdocs.yml
+++ b/aan/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - Lexicon: lexicon.md
   - Resources: resources.md
   - Studies: studies.md
+  - FAQ: faq.md
   - Network: network.md
   - Advisors: advisors.md
   - Contact: contact.md
