Well, breaking out the resources a bit

--- a/aan/mkdocs.yml
+++ b/aan/mkdocs.yml
@@ -24,6 +24,9 @@ nav:
   - Mission: mission.md
   - Lexicon: lexicon.md
   - Resources: resources.md
+  - Books: books.md
+  - Tools: tools.md
+  - Support: support.md
   - Studies: studies.md
   - FAQ: faq.md
   - Network: network.md
