--- a/aan/mkdocs.yml
+++ b/aan/mkdocs.yml
@@ -29,6 +29,8 @@ nav:
   - Support: support.md
   - Studies: studies.md
   - FAQ: faq.md
+  - Plutchik: plutchik.md
+  - Ekman: ekman.md
   - Network: network.md
   - Advisors: advisors.md
   - Contact: contact.md
