Add Papers section with sortable, searchable table of research papers including publication dates, authors, titles, and keywords

--- a/aan/mkdocs.yml
+++ b/aan/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - Lexicon: lexicon.md
   - Resources: resources.md
   - Books: books.md
+  - Papers: papers.md
   - Podcasts: podcasts.md
   - Tools: tools.md
   - Support: support.md
